create delete function

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <button id="search-t">search by title</button>
                 <button id="search-c">search by category</button>
             </div>
+            <div id="deletall">
+                
+            </div>
             <table>
                 <tr>
                     <th>ID</th>
